# hello_qt_cmake_display_image

./: .gitignore  CMakeLists.txt  README.md  build.sh  cameras.h  cameras.ui  main.cpp  mycamera.cpp  mycamera.h  test.h  test.sh  test.ui
src/: CMakeLists.txt  cameras.ui  mycamera.cpp
